# adr-vehicle

./: README.md
adr_bringup/: CMakeLists.txt  package.xml
adr_bringup/config/: controllers.yaml
adr_description/: CMakeLists.txt  package.xml
adr_description/urdf/: adr_ros2_control.xacro
bringup/config/: controllers.yaml
bringup/launch/: adr.launch.py
description/urdf/: .adr_ros2_control.xacro.swp  adr_ros2_control.xacro
hardware_interfaces/4wd_kit_hardware/include/4wd_kit_hardware/: 4wd_kit_hardware.hpp
hardware_interfaces/4wd_kit_hardware/src/: 4wd_kit_hardware.cpp
stm32/.metadata/: .log4j2.xml  version.ini
stm32/.metadata/.plugins/org.eclipse.cdt.core/: encoder_test.language.settings.xml
stm32/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
stm32/.metadata/.plugins/org.eclipse.core.resources/.projects/encoder_test/: .location
stm32/.metadata/.plugins/org.eclipse.core.resources/.projects/encoder_test/.indexes/: properties.index
stm32/.metadata/.plugins/org.eclipse.core.resources/.projects/encoder_test/.indexes/af/: history.index
stm32/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
stm32/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
stm32/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
stm32/encoder_test/: .cproject  encoder_test.ioc
stm32/encoder_test/Core/Src/: main.c  motor_encoder.c  motor_encoder.h  stm32f4xx_hal_msp.c
testing/: pwm_test.py  rpi_gpio_test.py  test.py  tof_sensor.py
(+2 files in other folders)
