<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adr_bringup</name>
  <version>1.0.0</version>
  <description>ros2_control bringup package for the MCAV Autonomous Delivery Robot FYP</description>
  <maintainer email="dylcg10@gmail.com">Dylan Gonzalez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
